--- a/styles-css.html
+++ b/styles-css.html
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    font-size: large;
+    
 }
 
 html,
@@ -66,6 +66,7 @@ main {
     background-color: white;
     flex: 0 0 440px;
     overflow: auto;
+    font-size: larger;
 }
 
 .receipt {
@@ -126,11 +127,13 @@ th.quantity {
 input {
   width: 100px;
   height: 50px;
+  font-size: larger;
 }
 
 .receipt-details {
     margin-top: 10px;
     flex-grow: 1;
+    font-size: larger;
 }
 
 .dotted-border {
@@ -143,6 +146,7 @@ input {
 
 table.summary-table {
     text-align: right;
+    font-size: larger;
 }
 
 tbody.summary-table td:nth-child(1) {
