Added feature to ensure no duplicate items. And update summary only after quanity is finished

--- a/styles-css.html
+++ b/styles-css.html
@@ -95,6 +95,10 @@ main {
     font-size: 1.25rem;
 }
 
+p#invoice-number {
+    font-size: larger;
+}
+
 th.description {
     width: 75px;
     text-align: left;
