updating invoice info and layout

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 <td class="empty-border" colspan="5"></td>
                             </tr>
                             <tr>
-                                <th class="description">Description</th>
+                                <th class="description">Flavor</th>
                                 <th class="quantity">Qty</th>
                                 <th class="price">Price</th>
                                 <th class="subtotal">Sub</th>
@@ -79,7 +79,7 @@
                                 <td></td>
                             </tr>
                         </tbody>
-                        <tbody class="summary-table" id="payment-summary">  
+                        <!-- <tbody class="summary-table" id="payment-summary">  
                             <tr>
                                 <td>Amt Paid:</td>
                                 <td id="amount-paid">$0.00</td>
@@ -101,7 +101,7 @@
                             <tr>
                                 <td class="empty-border" colspan="3"></td>
                             </tr>
-                        </tbody>
+                        </tbody> -->
                     </table>
                 </div>
                 <div class="receipt-footer flex-column">
