--- a/styles-css.html
+++ b/styles-css.html
@@ -13,7 +13,7 @@ body {
 }
 
 main {
-    height: 92%;
+    height: 50%;
 }
 
 body {
@@ -64,7 +64,7 @@ main {
 
 .order {
     background-color: white;
-    flex: 0 0 440px;
+    flex: 0 0 500px;
     overflow: auto;
     font-size: larger;
 }
@@ -100,24 +100,27 @@ p#invoice-number {
 }
 
 th.description {
-    width: 75px;
+    width: 50px;
     text-align: left;
 }
 
 th.price {
-    width: 100px;
+    width:50px;
+    text-align: center;
 }
 
 th.subtotal {
-    width: 175px;
+    width: 100px;
+    
 }
 
 th.delete {
-  width:100px;
+  width:50px;
 }
 
 th.quantity {
-    width: 175px;
+    width: 125px;
+    text-align: center;
 }
 
 
