Started customer info form

--- a/index.html
+++ b/index.html
@@ -141,7 +141,15 @@
             </div>
         </section>
     </main>
-    <?!= include('script-js') ?>
+    
 </body>
+<button class ="home"> home</button>
+<button class ="home"> lookup</button>
+<button class ="home"> customer info</button>
+<button class ="home"> counts</button>
+<button id="save"> save</button>
+
+<?!= include('script-js') ?>
+
 
 </html>
