--- a/styles-css.html
+++ b/styles-css.html
@@ -13,7 +13,7 @@ body {
 }
 
 main {
-    height: 50%;
+    height: 80%;
 }
 
 body {
@@ -54,9 +54,14 @@ main {
 .menu-payment {
     border: solid .5px;
     border-radius: 10px;
-    margin: 0px 10px 5px 10px;
+    
     height: 100%;
     max-height: 100%;
+}
+button{
+  height: 100px;
+  width: 125px;
+  margin-left: 25px;
 }
 
 
@@ -221,7 +226,7 @@ tbody.summary-table td:nth-child(3) {
     flex-shrink: 0;
     margin: 5px;
     background: rgba(255, 255, 255, .05);
-    width: 150px;
+    width: 125px;
 }
 
 .menu-img {
